mikec/tests/PASS/for/65.mc
/*test "for"*/
int main()
{
    int i;
    int j = 10;

    for( i = 0; i <= j; i ++ )
    {
       printf("Hello %d", i );
    }

  return 0;
}
