mikec/tests/FAIL/semantic/test-scope-for4.mc
void main(){
	int i = 0;
	char n = '1';
	int j = 0;
	for (i = 1; i < n; i = i + 1) j = j - 1;
	return;
}